force-app/main/default/objects/Table_Buddy_Config__c/Table_Buddy_Config__c.object-meta.xml
<CustomObject>
    <description
  >Stores Table Buddy configurations as JSON. Used by the Table Buddy Configurator UI and read by tableBuddy runtime component.</description>
    <label>Table Buddy Config</label>
    <nameField>
        <label>Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Table Buddy Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>